auth with github and auth with google

--- a/netflix-app/.env
+++ b/netflix-app/.env
@@ -7,3 +7,9 @@
 DATABASE_URL="mongodb+srv://nicolas:nicolas@cluster0.rprwwun.mongodb.net/test"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXTAUTH_SECRET="NEXT-SECRET"
+
+GITHUB_ID=a5f5ce426cf29600c1a0
+GITHUB_SECRET=2a281583b04139991ccdd054f72fa8e32d2738fb
+
+GOOGLE_CLIENT_ID=463694067196-mj309fb78e5ov6a321pkfuj8ui3bbupf.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
