--- a/netflix-app/package.json
+++ b/netflix-app/package.json
@@ -36,8 +36,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "swr": "^2.0.3",
+    "types": "^0.1.1",
     "typescript": "4.9.5",
-    "zustand": "^4.3.3"
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
